# standard

./: CMakeLists.txt
standard/: CMakeLists.txt  krayon_standard.cpp
